@@ -1,98 +1,46 @@
 {
-    "my_follower": [
-        {
-            "leader_index": "my_leader",
-            "follower_index": "my_follower",
-            "shard_id": 0,
-            "leader_global_checkpoint": 1,
-            "leader_max_seq_no": 1,
-            "follower_global_checkpoint": 1,
-            "follower_max_seq_no": 1,
-            "last_requested_seq_no": 1,
-            "number_of_concurrent_reads": 1,
-            "number_of_concurrent_writes": 0,
-            "number_of_queued_writes": 0,
-            "mapping_version": 2,
-            "total_fetch_time_millis": 21,
-            "number_of_successful_fetches": 142,
-            "number_of_failed_fetches": 6743,
-            "operations_received": 2,
-            "total_transferred_bytes": 166,
-            "total_index_time_millis": 48,
-            "number_of_successful_bulk_operations": 2,
-            "number_of_failed_bulk_operations": 0,
-            "number_of_operations_indexed": 2,
-            "fetch_exceptions": [
-                {
-                    "from_seq_no": 2,
-                    "retries": 6743,
-                    "exception": {
-                        "type": "exception",
-                        "reason": "NoShardAvailableActionException[No shard available for [Request{fromSeqNo=2, maxOperationCount=1024, shardId=[leader][0], expectedHistoryUUID=ki9Do9c-QQKVydB-6Txkdg, maxOperationSizeInBytes=9223372036854775807}]]; nested: RemoteTransportException[[d0XH9XU][127.0.0.1:9300][indices:data/read/xpack/ccr/shard_changes[s]]]; nested: IndexNotFoundException[no such index];",
-                        "caused_by": {
-                            "type": "no_shard_available_action_exception",
-                            "reason": "No shard available for [Request{fromSeqNo=2, maxOperationCount=1024, shardId=[leader][0], expectedHistoryUUID=ki9Do9c-QQKVydB-6Txkdg, maxOperationSizeInBytes=9223372036854775807}]",
-                            "caused_by": {
-                                "type": "index_not_found_exception",
-                                "reason": "no such index",
-                                "index_uuid": "RH8_j_w0Q0GGmpY0HMVQ_A",
-                                "index": "my_leader"
-                            }
-                        }
+    "auto_follow_stats": {
+        "number_of_failed_follow_indices": 0,
+        "number_of_failed_remote_cluster_state_requests": 0,
+        "number_of_successful_follow_indices": 1,
+        "recent_auto_follow_errors": []
+    },
+    "follow_stats": {
+        "indices": [
+            {
+                "index": "follower_index",
+                "shards": [
+                    {
+                        "remote_cluster": "remote_cluster",
+                        "leader_index": "leader_index",
+                        "follower_index": "follower_index",
+                        "shard_id": 0,
+                        "leader_global_checkpoint": 1024,
+                        "leader_max_seq_no": 1536,
+                        "follower_global_checkpoint": 768,
+                        "follower_max_seq_no": 896,
+                        "last_requested_seq_no": 897,
+                        "outstanding_read_requests": 8,
+                        "outstanding_write_requests": 2,
+                        "write_buffer_operation_count": 64,
+                        "follower_mapping_version": 4,
+                        "follower_settings_version": 2,
+                        "total_read_time_millis": 32768,
+                        "total_read_remote_exec_time_millis": 16384,
+                        "successful_read_requests": 32,
+                        "failed_read_requests": 0,
+                        "operations_read": 896,
+                        "bytes_read": 32768,
+                        "total_write_time_millis": 16384,
+                        "write_buffer_size_in_bytes": 1536,
+                        "successful_write_requests": 16,
+                        "failed_write_requests": 0,
+                        "operations_written": 832,
+                        "read_exceptions": [],
+                        "time_since_last_read_millis": 8
                     }
-                }
-            ],
-            "time_since_last_fetch_millis": 470
-        },
-        {
-            "leader_index": "my_leader",
-            "follower_index": "my_follower",
-            "shard_id": 1,
-            "leader_global_checkpoint": -1,
-            "leader_max_seq_no": -1,
-            "follower_global_checkpoint": -1,
-            "follower_max_seq_no": -1,
-            "last_requested_seq_no": -1,
-            "number_of_concurrent_reads": 0,
-            "number_of_concurrent_writes": 0,
-            "number_of_queued_writes": 0,
-            "mapping_version": 2,
-            "total_fetch_time_millis": 0,
-            "number_of_successful_fetches": 336,
-            "number_of_failed_fetches": 0,
-            "operations_received": 0,
-            "total_transferred_bytes": 0,
-            "total_index_time_millis": 0,
-            "number_of_successful_bulk_operations": 0,
-            "number_of_failed_bulk_operations": 0,
-            "number_of_operations_indexed": 0,
-            "fetch_exceptions": [],
-            "time_since_last_fetch_millis": 4323
-        },
-        {
-            "leader_index": "my_leader",
-            "follower_index": "my_follower",
-            "shard_id": 2,
-            "leader_global_checkpoint": 1,
-            "leader_max_seq_no": 1,
-            "follower_global_checkpoint": 1,
-            "follower_max_seq_no": 1,
-            "last_requested_seq_no": 1,
-            "number_of_concurrent_reads": 0,
-            "number_of_concurrent_writes": 0,
-            "number_of_queued_writes": 0,
-            "mapping_version": 2,
-            "total_fetch_time_millis": 0,
-            "number_of_successful_fetches": 372,
-            "number_of_failed_fetches": 0,
-            "operations_received": 2,
-            "total_transferred_bytes": 166,
-            "total_index_time_millis": 32,
-            "number_of_successful_bulk_operations": 2,
-            "number_of_failed_bulk_operations": 0,
-            "number_of_operations_indexed": 2,
-            "fetch_exceptions": [],
-            "time_since_last_fetch_millis": 4323
-        }
-    ]
+                ]
+            }
+        ]
+    }
 }
