@@ -19,7 +19,6 @@ package ccr
 
 import (
 	"encoding/json"
-	"fmt"
 	"time"
 
 	"github.com/joeshaw/multierror"
@@ -32,36 +31,24 @@ import (
 )
 
 func eventsMappingXPack(r mb.ReporterV2, m *MetricSet, info elasticsearch.Info, content []byte) error {
-	var data map[string]interface{}
+	var data response
 	err := json.Unmarshal(content, &data)
 	if err != nil {
-		return errors.Wrap(err, "failure parsing Elasticsearch CCR Stats API response")
+		err = errors.Wrap(err, "failure parsing Elasticsearch CCR Stats API response")
+		r.Error(err)
+		return err
 	}
 
 	var errors multierror.Errors
-	for _, followerShards := range data {
-
-		shards, ok := followerShards.([]interface{})
-		if !ok {
-			err := fmt.Errorf("shards is not an array")
-			errors = append(errors, err)
-			continue
-		}
-
-		for _, s := range shards {
-			shard, ok := s.(map[string]interface{})
-			if !ok {
-				err := fmt.Errorf("shard is not an object")
-				errors = append(errors, err)
-				continue
-			}
+	for _, followerIndex := range data.FollowStats.Indices {
+		for _, followerShard := range followerIndex.Shards {
 			event := mb.Event{}
 			event.RootFields = common.MapStr{
 				"cluster_uuid": info.ClusterID,
 				"timestamp":    common.Time(time.Now()),
 				"interval_ms":  m.Module().Config().Period / time.Millisecond,
 				"type":         "ccr_stats",
-				"ccr_stats":    shard,
+				"ccr_stats":    followerShard,
 			}
 
 			event.Index = elastic.MakeXPackMonitoringIndexName(elastic.Elasticsearch)
